--- a/views/explanation.jade
+++ b/views/explanation.jade
@@ -1,7 +1,10 @@
 extends /layouts/basic_layout
 
 block topbar
-  .title Kotodama
+  include /includes/topbar
+  +topbar(user_answer)
+
+
 
 block basic_content
   .questionArea
