--- a/views/admin.jade
+++ b/views/admin.jade
@@ -1,13 +1,14 @@
 extends /layouts/basic_layout
 
 block topbar
-  .title Kotodama
+  include /includes/topbar
+  +topbar(user_answer)
 
 block basic_content
-
   h1 結果報告
   p 今までの完全回答数
   それぞれの刺激（ことだま）ごとの回答
+
 
   table
     thead
