--- a/views/error.jade
+++ b/views/error.jade
@@ -1,5 +1,9 @@
 extends /layouts/basic_layout
 
+block topbar
+  include /includes/topbar
+  +topbar(user_answer)
+
 block basic_content
   h1= message
   h2= error.status
