--- a/views/index.jade
+++ b/views/index.jade
@@ -1,15 +1,14 @@
 extends /layouts/basic_layout
 
 block topbar
-  .title Kotodama
+  include /includes/topbar
+  +topbar(user_answer)
 
 block basic_content
   .questionArea
     h1 徹底調査！あなたのデザイン感覚！
     p このサイトではあなたの図形に対するイメージ「デザイン感覚」を調べます。
     p あなたは、多くの人に支持されるデザイン感覚の持ち主でしょうか。それとも、前衛的なデザイン感覚の持ち主でしょうか。19の図形に対して、その図形のイメージを答えることで、あなたのデザイン感覚支持率を調べましょう！
-
-
 
     h3 デザイン感覚調査についての説明
     p.aligncenter
@@ -30,7 +29,7 @@ block basic_content
         tr
           td(style="width:20%") 回答ID
           td
-            input(type="text" name="user_id" value="#{3}")
+            input(type="text" name="user_answer_id" value="#{user_answer_id}")
       p.aligncenter 
         input(type="submit" value="回答IDを使って回答") 
 
