--- a/views/questionnaires.jade
+++ b/views/questionnaires.jade
@@ -1,8 +1,8 @@
 extends /layouts/basic_layout
 
-
 block topbar
-  .title Kotodama
+  include /includes/topbar
+  +topbar(user_answer)
 
 block basic_content
   .questionArea
@@ -14,28 +14,20 @@ block basic_content
           td コトダマ
           td ステータス
       tbody
-
         each questionnaire in questionnaires
           tr 
             td 
               a(href="/questionnaires/#{questionnaire.id}")
                 img(src="/images/kotodamas/#{questionnaire.id.slice(1)}.png")
-
             td 
-              - let the_answer = questionnaire_answers.find(ans => ans.questionnaire_id == questionnaire.id);
-              if the_answer
+              - var the_answer = questionnaire_answers[questionnaire.id]
+              if the_answer != null
                 p 回答あり
-
+                
                 if the_answer.hasEmpty
                   p 回答は完全ではありません
                 else
                   p 回答は完了しています。
               else
                 p 未回答です。
-
-
-
-
-              
-
 
