--- a/views/start_really.jade
+++ b/views/start_really.jade
@@ -1,7 +1,8 @@
 extends /layouts/basic_layout
 
 block topbar
-  .title Kotodama
+  include /includes/topbar
+  +topbar(user_answer)
 
 block basic_content
   .questionArea
