--- a/views/thanks.jade
+++ b/views/thanks.jade
@@ -1,6 +1,5 @@
 extends /layouts/stimulus_layout
 
-
 block topbar
   include /includes/topbar
   +topbar(user_answer)
@@ -12,7 +11,19 @@ block stimulus_content
 block question_content
   .questionArea
     p ありがとうございました。
-    p この図形に関してあなたのデザイン感覚支持率は87%です。
+    p この図形に関してあなたのデザイン感覚支持率は#{Math.floor(total_point * 100)}%です。
+
+
+    each question_id in Object.keys(answer_feedbacks)
+      - other_answer =  answer_feedbacks[question_id]
+
+      h3 #{question_id} 支持率: #{Math.floor(other_answer.my_point*100)} %
+      .answerScale
+        .answerScale__inner
+          .answerScale__dev(style="left:#{other_answer.ave_rate*100}%;margin-left:-#{other_answer.dev_rate*100}%;width:#{other_answer.dev_rate*2*100}%")
+            .answerScale__ave
+          .answerScale__myAnswer(style="left:#{other_answer.my_answer_rate * 100}%")= other_answer.my_answer
+          
 
 
 
