--- a/views/admin.jade
+++ b/views/admin.jade
@@ -6,20 +6,50 @@ block topbar
 
 block basic_content
   h1 結果報告
-  p 今までの完全回答数
-  それぞれの刺激（ことだま）ごとの回答
+  h2 今までの完全回答数
 
 
   table
     thead
       tr
-        td
-        td
-        td
+        td id
+        //
+          td name
+          td email
+        td sex
+        td age
+        td answers
+        td controls
     tbody
-      tr
-        td
-        td
-        td
+      each user_answer in all_user_answers
+        tr
+          td
+            a(href="/questionnaires/restart?user_answer_id=#{user_answer.id}")=user_answer.id
+          //
+            td= user_answer.user_info.name
+            td= user_answer.user_info.email
+          - const is_male = user_answer.user_info.is_male;
+          td= is_male != undefined && (is_male ? "男" : "女")
+          td= user_answer.user_info.age
+          td
+            | 残り#{user_answer.left_questionnaires.length} 個の設問
+            | #{user_answer.left_questionnaires.map(q=>q.id).join(',')}
+          td controls
 
+
+  h2 それぞれの刺激（ことだま）ごとの回答
     
+  table 
+    thead
+      tr 
+        td コトダマ
+        td ステータス
+    tbody
+      each questionnaire in questionnaires
+        tr 
+          td 
+            a(href="/questionnaires/#{questionnaire.id}")
+              img(src="/images/kotodamas/#{questionnaire.id.slice(1)}.png")
+          td 
+            p aa
+            
