--- a/views/finish.jade
+++ b/views/finish.jade
@@ -8,34 +8,47 @@ block basic_content
   .questionArea
     p 支持率調査への多大なご協力、ありがとうございました。
 
-    p あなたのデザイン感覚支持率は87%です。
+    p あなたのデザイン感覚支持率は
+      strong #{Math.floor(total_total_point *100)} %
+      |です。
+
+    
+    if total_total_point  > 0.9
+      p 非常に多くの方に支持され、称賛されるでしょう。
+    else if total_total_point  > 0.8
+      p 多くの方に支持され、共感を得るでしょう。
+    else if total_total_point  > 0.6
+      p 広く受け入れられており、親しみをもたれるでしょう。
+    else if total_total_point  > 0.4
+      p 少し独創的で周りの人に一目置かれるでしょう。
+    else if total_total_point  > 0.2
+      p 独創的で根強いファンがつくでしょう。
+    else if total_total_point  > 0.1
+      p 前衛的で一部の人が強く支持するでしょう。
+    else 
+      p とても前衛的でカリスマ的感覚の持ち主です。
+
+
+    
+
+    - qs = Object.assign({}, results);
+    - var rows_num = 5;
+    - var questionnaires_rows = [];
+    - while(qs.length > rows_num){
+    -   questionnaires_rows.push(qs.splice(0, rows_num));
+    - };
+    - questionnaires_rows.push(qs);
 
     table
-      tr
-        td(style="width:20%") 90-100 
-        td 非常に多くの方に支持され、称賛されるでしょう。
-      tr
-        td 80-90 
-        td 多くの方に支持され、共感を得るでしょう。
+      each questionnaires_row in questionnaires_rows
+        tr
+          each questionnaire in questionnaires_row
+            td
+              img(src="/images/kotodamas/#{questionnaire.id.slice(1)}.png")
+              p.aligncenter #{ Math.floor( questionnaire.total_point * 100 )} %
+              
+    p.aligncenter
+      a.button(href="/questionnaires/start") 他の回答を作成
 
-      tr
-        td 60-80 
-        td 広く受け入れられており、親しみをもたれるでしょう。
-
-      tr
-        td 40-60 
-        td 少し独創的で周りの人に一目置かれるでしょう。
-      tr
-        td 20-40 
-        td 独創的で根強いファンがつくでしょう。
-      tr
-        td 10-20 
-        td 前衛的で一部の人が強く支持するでしょう。
-      tr
-        td 0-10 
-        td とても前衛的でカリスマ的感覚の持ち主です。
-
-
-    a.button(href="/questionnaires/start") 他の回答を作成
-
-    a.button(href="/") トップに戻る
+    p.aligncenter
+      a.button(href="/") トップに戻る
