feat(admin): add auth

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -6,48 +6,13 @@ block topbar
 
 block basic_content
   h1 結果報告
-  h2 今までの完全回答数
-
 
   table
-    thead
-      tr
-        td id
-        td name
-        td email
-        td sex
-        td age
-        td answers
-        td controls
-    tbody
-      each user_answer in all_user_answers
-        tr
-          td
-            a(href="/questionnaires/restart?user_answer_id=#{user_answer.id}")=user_answer.id
-          td= user_answer.user_info.name_str
-          td= user_answer.user_info.email
-          - const is_male = user_answer.user_info.is_male;
-          td= is_male != undefined && (is_male ? "男" : "女")
-          td= user_answer.user_info.age
-          td
-            | 残り#{user_answer.left_questionnaires.length} 個の設問
-            | #{user_answer.left_questionnaires.map(q=>q.id).join(',')}
-          td controls
-
-
-  h2 それぞれの刺激（ことだま）ごとの回答
-    
-  table 
-    thead
-      tr 
-        td コトダマ
-        td ステータス
-    tbody
-      each questionnaire in questionnaires
-        tr 
-          td 
-            a(href="/questionnaires/#{questionnaire.id}")
-              img(src="/images/kotodamas/#{questionnaire.id.slice(1)}.png")
-          td 
-            p aa
-            
+    tr
+      td 
+        a.button(href="/admin/users") ユーザーの回答
+      td 
+        a.button(href="/admin/kotodamas") コトダマごとに見る
+      td 
+        a.button(href="/admin/questions") 質問ごとに見る
+  
