--- a/views/kotodamas.jade
+++ b/views/kotodamas.jade
@@ -3,6 +3,7 @@ extends /layouts/basic_layout
 block topbar
   include /includes/topbar
   +topbar(user_answer)
+  a(href="/admin") 管理画面トップ
 
 
 block basic_content
