--- a/views/questions.jade
+++ b/views/questions.jade
@@ -4,6 +4,7 @@ extends /layouts/basic_layout
 block topbar
   include /includes/topbar
   +topbar(user_answer)
+  a(href="/admin") 管理画面トップ
 
 block basic_content
   h1 質問一覧
