--- a/views/explanation.jade
+++ b/views/explanation.jade
@@ -8,17 +8,37 @@ block topbar
 
 block basic_content
   .questionArea
-    p コトダマとは
-    p ふがふが
-    p ほげほげ
-    p ふがふが
-    p ほげほげ
-    p ふがふが
-    p ほげほげ
-    p ふがふが
-    p ほげほげ
-    p ふがふが
-    p ほげほげ
+    p この調査は、電気通信大学 坂本研究室 修士学生の石井将文の研究の調査です。
+    p 私は、人間の視覚と感情の関わりについて調べるために、視覚を学習するAI「コトダマ」を制作しました。電気通信大学より特許申請中の技術です。
+    h2 コトダマとは
+    p コトダマとは、「複数の色と形が同じ図形をさまざまに配置した図形」というルールに基づき、以下のように、いろんな印象の形に変化することのできるAIです。
+
+    p(style="text-align:center")
+      img(src="/images/kotodamas/kotodama_basic.png" style="width:50%" alt="kotodama")
+
+    p しかし、どのような図形パラメータが、人間が感じるどのような感情（印象）に影響を及ぼすかがまだ明らかではありません。
+    p そこで、このアンケート調査により、コトダマにあなたの視覚感情効果を学習させていただきたいのです。
+    h2 アンケートについて
+    p アンケートでは、表示されているコトダマの色と形からうける印象について、表示される43の形容詞対をもちいてこたえていただきます。
+    p たとえば、このコトダマについてとても暖かいと感じたならば１番を。やや冷たいと感じたならば5番を。どちらでもないと思った場合は４番を選択してください。
+
+
+    
+    p(style="text-align:center")
+      img(src="/images/kotodamas/kotodama_basic.png" style="width:50%" alt="kotodama")
+
+    include /includes/questionTable
+
+    +questionTable({left:"あたたかい",right:"つめたい"}, 7)
+    p アンケートの答え方はお分りいただけましたでしょうか？
+    h3 途中回答について
+    p このアンケートは、「回答ID」を覚えておくと、回答を途中から再開できます。
+    p 次の画面で個人情報を入力すると、回答ID（６桁の数字）が表示されます。それを忘れずにメモしてください。
+    p アンケートの回答中に何か予定が起こってしまっても、このページに戻ってきていただいて回答IDを入力すれば、回答を再開できます。また、スマホやPCなどの端末を変えても回答できます。
+    p また、全て回答したあとには結果が表示されますが、その表示にも回答IDが必要です。
+    p それでは、ぜひ以下のボタンを押して、アンケートにお答えください。どうぞよろしくお願いいたします。
+
+
 
     p.aligncenter
       a.button(href="questionnaires/start") 調査を開始
