--- a/views/index.jade
+++ b/views/index.jade
@@ -7,8 +7,15 @@ block topbar
 block basic_content
   .questionArea
     h1 徹底調査！あなたのデザイン感覚！
-    p このサイトではあなたの図形に対するイメージ「デザイン感覚」を調べます。
-    p あなたは、多くの人に支持されるデザイン感覚の持ち主でしょうか。それとも、前衛的なデザイン感覚の持ち主でしょうか。19の図形に対して、その図形のイメージを答えることで、あなたのデザイン感覚支持率を調べましょう！
+    p この調査では、あなたの図形に対するイメージ「デザイン感覚」を、独自開発のヴィジュアル人工知能「コトダマ」を用いて調べます。
+
+    p(style="text-align:center")
+      img(src="/images/kotodamas/kotodama_basic.png" style="width:50%" alt="kotodama")
+
+  
+    p 全てのアンケートに答えると、あなたのデザイン感覚に対する「支持率」がわかります。あなたは、多くの人に支持されるデザイン感覚の持ち主でしょうか。それとも、前衛的なデザイン感覚の持ち主でしょうか。
+    p 19のコトダマに対して、その図形のイメージを答えることで、あなたのデザイン感覚支持率を調べましょう！
+
 
     h3 デザイン感覚調査についての説明
     p.aligncenter
