--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -874,6 +874,19 @@ tr.questionTable__adjRow {
   margin-right: 20px; }
 
 /* line 22, scss/_answerScale.scss */
+.answerScale__data {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-top: 10px;
+  margin-left: -10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2); }
+
+/* line 40, scss/_answerScale.scss */
 .answerScale__dev {
   position: absolute;
   top: 0;
@@ -883,9 +896,9 @@ tr.questionTable__adjRow {
   width: 10%;
   height: 40px;
   border-radius: 20px;
-  background: pink; }
+  background: rgba(255, 0, 0, 0.5); }
 
-/* line 38, scss/_answerScale.scss */
+/* line 58, scss/_answerScale.scss */
 .answerScale__ave {
   position: absolute;
   top: 0;
@@ -895,9 +908,10 @@ tr.questionTable__adjRow {
   width: 40px;
   height: 40px;
   border-radius: 20px;
-  background: red; }
+  border: red solid 3px;
+  background: none; }
 
-/* line 54, scss/_answerScale.scss */
+/* line 75, scss/_answerScale.scss */
 .answerScale__myAnswer {
   position: absolute;
   top: 0;
