--- a/views/questions.jade
+++ b/views/questions.jade
@@ -7,6 +7,7 @@ block topbar
   a(href="/admin") 管理画面トップ
 
 block basic_content
+  include /includes/answerScale
   h1 質問一覧
 
   each question in questions
@@ -25,15 +26,9 @@ block basic_content
           td 
             - var ave_var = questionnaire.question_answers_ave_var[question.id];
 
-            - var normalized_data = ave_var.data.map(normalize)
 
-            .answerScale
-              .answerScale__inner
-                each point,index in normalized_data
-                  - var rate = index/normalized_data.length
-                  .answerScale__data(style="left:#{point*100}%;margin-top:#{rate*20}px") 
-                
-                .answerScale__dev(style="left:#{ave_var.ave_rate*100}%;margin-left:-#{ave_var.dev_rate*100}%;width:#{ave_var.dev_rate*2*100}%")
-                  .answerScale__ave
+            - var ave = ave_var.ave_rate;
+            - var dev = ave_var.dev_rate;
+            - var data = ave_var.data_rate;
+            +answerScale(ave, dev, null, null, data)
 
-                
