--- a/views/includes/topbar.jade
+++ b/views/includes/topbar.jade
@@ -2,7 +2,7 @@ mixin topbar(user_answer)
   .topbar__inner
     .topbar__title
       h1 
-        a(href="/") デザイン感覚
+        a(href="/" style="text-decoration:none;") デザイン感覚調査
 
     .topbar__userInfo
       if user_answer
