--- a/views/kotodamas.jade
+++ b/views/kotodamas.jade
@@ -7,6 +7,8 @@ block topbar
 
 
 block basic_content
+  include /includes/answerScale
+
   table 
     thead
       tr 
@@ -24,13 +26,12 @@ block basic_content
               - var q_answer = questionnaire.question_answers_ave_var[question_id]
               - var question = questions.find(q=> q.id == question_id)
 
-              p(style="text-align:center;margin-bottom:0")= question.left + " < = >  " +  question.right
-              .answerScale
-                .answerScale__inner
-                  .answerScale__dev(
-                    style=" left:#{q_answer.ave_rate*100}%; margin-left:-#{q_answer.dev_rate*100}%; width:#{q_answer.dev_rate*2*100}%")
-                    .answerScale__ave
-              hr
+              //p(style="text-align:center;margin-bottom:0")= question.left + " < = >  " +  question.right
+
+              - var ave = q_answer.ave_rate;
+              - var dev = q_answer.dev_rate;
+              +answerScale(ave, dev, null, null, null)
+
           
             
             
