--- a/views/includes/answerScale.jade
+++ b/views/includes/answerScale.jade
@@ -8,7 +8,10 @@ mixin answerScale(ave, dev, my_ans_rate, my_ans, data)
                 
       .answerScale__dev(style="left:#{ave*100}%;margin-left:-#{dev*100}%;width:#{dev*2*100}%")
         .answerScale__ave
-      if my_ans && my_ans_rate
+
+      //もっとスマートにかきたいけどな
+      if my_ans != null && my_ans_rate != null && my_ans != undefined && my_ans_rate != undefined
+
         .answerScale__myAnswer(style="left:#{my_ans_rate * 100}%")= my_ans
 
 
