--- a/views/index.jade
+++ b/views/index.jade
@@ -4,13 +4,46 @@ block topbar
   include /includes/topbar
   +topbar(user_answer)
 
+block append body_end
+  script(type="text/javascript" src="/javascripts/riot.min.js")
+  script(type="text/javascript" src="/riotjs/kotodama-paper.js")
+
+  script(type="text/javascript" src="/javascripts/underscore-min.js")
+
+  script(type="text/javascript" src="/javascripts/imagelib.js")
+
+  script(type="text/javascript" src="/javascripts/Vec2.js")
+  script(type="text/javascript" src="/javascripts/Angle.js")
+  script(type="text/javascript" src="/javascripts/canvaslib.js")
+  script(type="text/javascript" src="/javascripts/Tama.js")
+  script(type="text/javascript" src="/javascripts/Kotodama.js")
+  script(type="text/javascript" src="/javascripts/KotodamaView.js")
+
+  script(type="text/javascript" ).
+    //ことだまオブジェクトを作成 ... いまのところシングルトン
+    var kotodama = new Kotodama({ 
+      generateOptions :{
+        tamaNum:15,sizeDiff:1,forceDiff:-1,separation:1.7,angleSeparation:0.1,angle:3.14,shape:4,colorHue:180,colorSat:0.7,colorVal:0.8,colorAlpha:0.3
+      }
+    }); 
+
+    var kotodamaView = new KotodamaView(kotodama);
+    riot.mount('kotodama-paper', {kotodamaView:kotodamaView, kotodama:kotodama});
+
+    
+  
 block basic_content
   .questionArea
     h1 徹底調査！あなたのデザイン感覚！
     p この調査では、あなたの図形に対するイメージ「デザイン感覚」を、独自開発のヴィジュアル人工知能「コトダマ」を用いて調べます。
 
-    p(style="text-align:center")
-      img(src="/images/kotodamas/kotodama_basic.png" style="width:50%" alt="kotodama")
+
+    div(style="width:70%;margin:0 auto;")
+      kotodama-paper
+
+
+
+
 
   
     p 全てのアンケートに答えると、あなたのデザイン感覚に対する「支持率」がわかります。あなたは、多くの人に支持されるデザイン感覚の持ち主でしょうか。それとも、前衛的なデザイン感覚の持ち主でしょうか。
