--- a/views/includes/answerScale.jade
+++ b/views/includes/answerScale.jade
@@ -1,10 +1,6 @@
 mixin answerScale(ave, dev, my_ans_rate, my_ans, data)
   .answerScale
     .answerScale__inner
-      if data && data.length > 0
-        each point,index in data
-          - var rate = index/data.length // 高さをばらつかせる
-          .answerScale__data(style="left:#{point*100}%;margin-top:#{rate*20}px; opacity:#{5/data.length}") 
                 
       .answerScale__dev(style="left:#{ave*100}%;margin-left:-#{dev*100}%;width:#{dev*2*100}%")
         .answerScale__ave
@@ -13,6 +9,17 @@ mixin answerScale(ave, dev, my_ans_rate, my_ans, data)
       if my_ans != null && my_ans_rate != null && my_ans != undefined && my_ans_rate != undefined
 
         .answerScale__myAnswer(style="left:#{my_ans_rate * 100}%")= my_ans
+
+      if data && data.length > 0
+        each point,index in data
+          - var rate = index/data.length // 高さをばらつかせる
+          if typeof point == "number"
+            .answerScale__data(
+              style="left:#{point*100}%;margin-top:#{rate*20}px; opacity:#{5/data.length}") 
+          else if typeof point == "object"
+            .answerScale__data(
+              style="left:#{point.ave*100}%;margin-top:#{rate*20}px; opacity:1;background:none") 
+              img(src="/images/kotodamas/#{point.questionnaire_id.slice(1)}.png"  style="width:100%")
 
 
 
