enabled free text fo questionnaire_id

--- a/views/questionnaire.jade
+++ b/views/questionnaire.jade
@@ -7,7 +7,7 @@ block topbar
 
 block stimulus_content
   .stimulusArea
-    img(src="/images/kotodamas/#{questionnaire_id.slice(1)}.png")
+    p(style="font-size:50px;text-align:center")= questionnaire_id
 
 block question_content
   .questionArea
